[GM3Restyling] Fix misaligned focus ring for `:active` state.
This was caused by the removal of `top` and `left` properties for the
`&::before` selectors in https://crrev.com/c/5749005, which causes the
`::before` pseudo element to cascade `top: -6px` and `left: -6px` from
the specific `&:active::before` selectors.

Fixed: 361008594
Bug: 353397958
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5797138
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -305,6 +305,8 @@ input {
         width: 15px;
         border-radius: 5px;
         position: absolute;
+        top: 0;
+        left: 0;
         border: 2px solid var(--sys-color-state-focus-ring);
       }
     }
